# WISDM-ActitrackerDataset-WirelessSensorDataMining

./: .gitignore  README.md  requirements.txt
Andrei/: train_robust_model.py  wisdm_classification_raw.ipynb  wisdm_cnn_robust_model.keras
Andrei/eval_results_robust/: noisy_evaluation_results.csv
Andrei/noisy_sets/: client_C_noise_0.050.csv  client_C_noise_0.100.csv
Stefan/: requirements.txt
Stefan/src/wisdm-eda/: README.md  run.sh
Stefan/src/wisdm-har-classification/save_params/: final_global_model.npy
Stefan/src/wisdm-har-classification/wisdm_har_classification/: dataloader.py  logger.py  server_app.py
WISDM_ar_v1.1/: client_A.csv  client_B.csv  client_C.csv
src/: cross_validation.py
src/cross_validation_results/: cross_validation_results.csv  report_modelA_on_clientA.csv  report_modelA_on_clientB.csv  report_modelA_on_clientC.csv  report_modelB_on_clientA.csv  report_modelB_on_clientB.csv  report_modelB_on_clientC.csv  report_modelC_on_clientA.csv  report_modelC_on_clientB.csv  report_modelC_on_clientC.csv  report_modelD_on_clientA.csv  report_modelD_on_clientB.csv  report_modelD_on_clientC.csv
src/wisdm-eda/: eda.py
src/wisdm-har-classification/: README.md  pyproject.toml  run.sh
src/wisdm-har-classification/wisdm_har_classification/: client_app.py  model.py  server_app.py  utils.py
src/wisdm-har-dp/: create_plots.py  pyproject.toml  run.sh
src/wisdm-har-dp/save_params/: federated_dp_model.npy  federated_training_history.npy
src/wisdm-har-dp/wisdm-har-dp/: client_app.py  dp_utils.py  model.py  server_app.py  task.py
src/wisdm-har-robustness/: create_noisy_client_c.py  evaluate_noisy_sets.py  wisdm_classification.ipynb  wisdm_cnn_fft_model.keras
src/wisdm-har-robustness/eval_results/: noisy_evaluation_results.csv
src/wisdm-har-robustness/noisy_sets/: client_C_noise_0.200.csv
